--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.12",
     "papaparse": "^5.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^4.0.12",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -24,11 +21,14 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vite": "^6.0.5"
   }
 }
