--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chess.js": "^1.0.0-beta.8",
     "papaparse": "^5.5.1",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "xlsx": "^0.18.5"
