--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/server.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "axios": "^1.6.2",
+    "chess.js": "^1.0.0-beta.8",
     "papaparse": "^5.5.1",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "xlsx": "^0.18.5"
@@ -22,11 +28,18 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "express": "^4.18.2",
     "globals": "^15.14.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^6.0.5"
