--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "now-php@1.0.0"
+      
     }
   },
   "rewrites": [
