--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x",
-      "memory": 1024
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
