--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "react-chessboard": "^4.7.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "socket.io-client": "^4.7.4",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.92.7",
+    "framer-motion": "^10.16.16",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
