--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.15.12",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "chess.js": "^1.0.0-beta.8",
+    "framer-motion": "^10.16.16",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "papaparse": "^5.5.1",
@@ -23,9 +26,7 @@
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.7.4",
     "three": "^0.160.0",
-    "@react-three/fiber": "^8.15.12",
-    "@react-three/drei": "^9.92.7",
-    "framer-motion": "^10.16.16",
+    "three-stdlib": "^2.36.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
